# trendscout

./: .coverage  .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  changelog.md  index.md  quickstart.md
tests/: test_basic.py
trendscout/: __init__.py  scraper.py  sentiment.py  velocity.py
trendscout/sources/: __init__.py  github_trending.py  hackernews.py  rss.py
